[package]
name = "masamune"
version = "0.1.0"
authors = ["Ganesha Danu <ganeshadanu1@gmail.com>"]
edition = "2018"

[dependencies]
gotham = "0.3.0"
hyper = "0.12.25"
mime = "0.3.13"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
gotham_middleware_jwt = "0.3.1"
gotham_derive = "0.3.0"
